--- a/CollaborativeFiltering.ipynb
+++ b/CollaborativeFiltering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
     "# in your .bashrc file so you do not have to type these lines\n",
     "sys.path.append(os.path.join(msd_code_path,'PythonSrc') )\n",
     "\n",
-    "taste_profile_data_path=\"./data/TeenyTinyEchoNestTasteProfileSubset.csv\"\n",
+    "taste_profile_data_path=\"./data/TinyEchoNestTasteProfileSubset.csv\"\n",
     "assert os.path.isfile(taste_profile_data_path)\n",
     "\n",
     "# imports specific to the MSD\n",
@@ -43,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,33 +110,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>e45503e1d7c3c88fcea0da0947292afdbb26d27c</td>\n",
-       "      <td>SOISQID12A6D4FD97C</td>\n",
+       "      <td>293073e399f3d3b3dc38b8043175d23902645f4c</td>\n",
+       "      <td>SORGAPU12A8AE4585E</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ec04a29f15f25f1413256035c76be47675861682</td>\n",
-       "      <td>SODSESK12A81C2178C</td>\n",
+       "      <td>b5f15729a33087a849df1747f99adf699dc154d9</td>\n",
+       "      <td>SOJYCEU12A6701FBAA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>144889203bd3fbd4dcb1a64dca945c7aece4c14b</td>\n",
-       "      <td>SOLNDSO12AF72ABA6C</td>\n",
-       "      <td>1</td>\n",
+       "      <td>e35f2113adc67b2ce5372a2eff4115f5d38133c7</td>\n",
+       "      <td>SOBEGGQ12A8C1341E0</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>d4ed4f49f3020cc18dd413acc8824ee02d72c48b</td>\n",
-       "      <td>SOBOFXF12A6D4F83F0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>e7d091018fede4482d03eddb414cd7e245cd476a</td>\n",
+       "      <td>SOVVHRL12A6D4F6BF7</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>67ab466c740e28e8afc3762b75571f5162ae9411</td>\n",
-       "      <td>SOIGGWG12A6D4F85D4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>d7de5fcb8f1fa64e4eaab85a51f7e59d0c8040d7</td>\n",
+       "      <td>SOQWZHE12A67AE10FF</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -137,14 +144,14 @@
       ],
       "text/plain": [
        "                                       user                song  play_count\n",
-       "0  e45503e1d7c3c88fcea0da0947292afdbb26d27c  SOISQID12A6D4FD97C           1\n",
-       "1  ec04a29f15f25f1413256035c76be47675861682  SODSESK12A81C2178C           1\n",
-       "2  144889203bd3fbd4dcb1a64dca945c7aece4c14b  SOLNDSO12AF72ABA6C           1\n",
-       "3  d4ed4f49f3020cc18dd413acc8824ee02d72c48b  SOBOFXF12A6D4F83F0           2\n",
-       "4  67ab466c740e28e8afc3762b75571f5162ae9411  SOIGGWG12A6D4F85D4           1"
+       "0  293073e399f3d3b3dc38b8043175d23902645f4c  SORGAPU12A8AE4585E           1\n",
+       "1  b5f15729a33087a849df1747f99adf699dc154d9  SOJYCEU12A6701FBAA           1\n",
+       "2  e35f2113adc67b2ce5372a2eff4115f5d38133c7  SOBEGGQ12A8C1341E0           7\n",
+       "3  e7d091018fede4482d03eddb414cd7e245cd476a  SOVVHRL12A6D4F6BF7           1\n",
+       "4  d7de5fcb8f1fa64e4eaab85a51f7e59d0c8040d7  SOQWZHE12A67AE10FF           5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +169,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(48374, 3)\n"
+      "(483736, 3)\n"
      ]
     }
    ],
@@ -173,21 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: 'e45503e1d7c3c88fcea0da0947292afdbb26d27c'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-0bcde9396dca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"e45503e1d7c3c88fcea0da0947292afdbb26d27c\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'e45503e1d7c3c88fcea0da0947292afdbb26d27c'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = \"e45503e1d7c3c88fcea0da0947292afdbb26d27c\"\n"
    ]
@@ -196,6 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### To check if the data we are using is also in the MSD\n",
     "Running the cell to get all valid_zone_ids showed that all songs in data are valid songs in the MSD"
    ]
   },
@@ -246,8 +242,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fit model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -402,19 +405,19 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -424,12 +427,12 @@
        "   user  song  play_count\n",
        "0     0     0           1\n",
        "1     1     1           1\n",
-       "2     2     2           1\n",
-       "3     3     3           2\n",
-       "4     4     4           1"
+       "2     2     2           7\n",
+       "3     3     3           1\n",
+       "4     4     4           5"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,11 +443,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 latent factors and regularization = 0.001: validation RMSE is 5.62476611477\n",
+      "50 latent factors and regularization = 0.01: validation RMSE is 5.62476757102\n",
+      "50 latent factors and regularization = 0.1: validation RMSE is 5.62477833389\n",
+      "50 latent factors and regularization = 1: validation RMSE is 5.62474339512\n",
+      "50 latent factors and regularization = 2: validation RMSE is 5.6246331639\n",
+      "\n",
+      "The best model has 50 latent factors and regularization = 2\n"
+     ]
+    }
+   ],
    "source": [
-    "model = tune_ALS(training, val, 30, [1e-3, 1e-2, 1e-1, 1, 2], [20, 100, 1000])"
+    "model = tune_ALS(training, val, 20, [1e-3, 1e-2, 1e-1, 1, 2], [50])"
    ]
   },
   {
@@ -480,18 +497,6 @@
    "display_name": "music-cs182",
    "language": "python",
    "name": "music-cs182"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
   }
  },
  "nbformat": 4,
