Updated NN to work

--- a/NN.ipynb
+++ b/NN.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Conv1D, MaxPooling1D, Dense"
+    "from keras.models import Model\n",
+    "from keras.layers import Conv1D, MaxPooling1D, Dense, Lambda, concatenate, Input, GlobalMaxPooling1D, GlobalAveragePooling1D\n",
+    "import keras.backend as K\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,60 +30,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def l2_norm(x):\n",
+    "    x = x ** 2\n",
+    "    x = K.sum(x, axis=1)\n",
+    "    x = K.sqrt(x)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AudioCNNModel():\n",
     "    def __init__(self, num_frames, num_freq_bins, num_conv_filters1, pool_size_1, kernel_size):\n",
     "        \n",
-    "        self.net = Sequential()\n",
     "        self.num_frames = num_frames\n",
     "        self.num_freq_bins = num_freq_bins\n",
     "        self.num_conv_filters1 = num_conv_filters1\n",
     "        self.pool_size1 = pool_size_1\n",
     "        self.kernel_size = kernel_size\n",
+    "        self.model_input = Input(shape=(num_frames, num_freq_bins))\n",
     "        \n",
-    "        conv1 = keras.layers.Conv1D(filters=self.num_conv_filters1, kernel_size=self.kernel_size, input_shape=(self.num_frames, self.num_freq_bins))\n",
-    "        pool1 = keras.layers.MaxPooling1D(pool_size=self.pool_size1)\n",
-    "        conv2 = keras.layers.Conv1D(filters=256, kernel_size=self.kernel_size)\n",
-    "        pool2 = keras.layers.MaxPooling1D(pool_size=2)\n",
-    "        conv3 = keras.layers.Conv1D(filters=512, kernel_size=self.kernel_size)\n",
-    "        pool3 = keras.layers.MaxPooling1D(pool_size=2)\n",
+    "        x = Conv1D(filters=self.num_conv_filters1, kernel_size=self.kernel_size, input_shape=(self.num_frames, self.num_freq_bins))(self.model_input)\n",
+    "        x = MaxPooling1D(pool_size=self.pool_size1)(x)\n",
+    "        x = Conv1D(filters=256, kernel_size=self.kernel_size)(x)\n",
+    "        x = MaxPooling1D(pool_size=2)(x)\n",
+    "        x = Conv1D(filters=512, kernel_size=self.kernel_size)(x)\n",
+    "        x = MaxPooling1D(pool_size=2)(x)\n",
     "\n",
-    "        self.net.add(conv1)\n",
-    "        self.net.add(pool1)\n",
-    "        self.net.add(conv2)\n",
-    "        self.net.add(pool2)\n",
-    "        self.net.add(conv3)\n",
-    "        self.net.add(pool3)\n",
-    "        #TODO: Add temporal pooling, L2, average here\n",
-    "        self.net.add(Dense(2048, activation='relu'))\n",
-    "        self.net.add(Dense(2048, activation='relu'))\n",
-    "        self.net.add(Dense(40))\n",
+    "        #temporal pooling, L2, mean\n",
+    "        max_layer = GlobalMaxPooling1D(data_format='channels_last')(x)\n",
+    "        mean_layer = GlobalAveragePooling1D(data_format='channels_last')(x)\n",
+    "        L2_layer = Lambda(lambda x: l2_norm(x))(x)\n",
+    "        #TODO:concatenate\n",
+    "        \n",
+    "        x = concatenate([max_layer, mean_layer, L2_layer])\n",
+    "        #End\n",
+    "        x = Dense(2048, activation='relu')(x)\n",
+    "        x = Dense(2048, activation='relu')(x)\n",
+    "        latent_factors = Dense(50)(x)\n",
+    "        self.net = Model(inputs=self.model_input, outputs=latent_factors)\n",
     "        \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2, 35, 40)"
+       "(1, 50)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = AudioCNNModel(num_frames, num_freq_bins, num_conv_filters_1, 4, kernel_size)\n",
-    "model.net.predict(np.array([dummy_data, dummy_data])).shape"
+    "model.net.predict(np.array([dummy_data])).shape"
    ]
   },
   {
