--- a/Audio-Feature-Converter.ipynb
+++ b/Audio-Feature-Converter.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import glob\n",
@@ -48,9 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def extract_features(basedir, extension='.mp3', spec_size=(128, 644), spec_type='MFCC', plot=False):\n",
@@ -114,9 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -335,9 +329,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "music-cs182",
    "language": "python",
-   "name": "python2"
+   "name": "music-cs182"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,5 +347,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
